fixed full width products view on small screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -475,11 +475,13 @@ Contact
     .section-features {
         flex-direction: column;
 
+
     }
 
     .section-features .feature-box {
 
         width: 90vw;
+        width: 100%;
     }
 
     .section-about {
